--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "schema": "src/db/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "6.10.1",
+    "@prisma/client": "6.16.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -30,7 +30,7 @@
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "openai": "^5.7.0",
-    "prisma": "^6.10.1",
+    "prisma": "6.16.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
