--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "pnpm dlx prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "migrate": "pnpm dlx prisma generate && env $(cat .env | xargs) pnpm dlx prisma migrate dev"
-  },
+  "dev": "next dev --turbopack",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint",
+  "migrate": "prisma generate && env $(cat .env | xargs) prisma migrate dev",
+  "postinstall": "prisma generate"
+},
   "prisma": {
     "schema": "src/db/schema.prisma"
   },
